--- a/src/main/resources/templates/mypage/mypage.html
+++ b/src/main/resources/templates/mypage/mypage.html
@@ -4,7 +4,7 @@
     <!-- Bootstrap core JS-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <!--jquery-->
-    <script	src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+    <script src="https://code.jquery.com/jquery-latest.min.js"></script>
     <!-- Font Awesome icons (free version)-->
 <!--    <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
@@ -32,7 +32,7 @@
 <style>
     .container-fluid {
         height: 100%;
-        overflow: hidden;
+        /*overflow: hidden;*/
     }
 
     .container-fluid .row {
@@ -108,7 +108,9 @@
         border: 1px solid #AAA;
         width: 70px;
     }
-    #touritem-info {
+    #touritem-wrap {
+        padding: 5px;
+        cursor: pointer;
         position: absolute;
         z-index: 100;
         bottom: 3rem;
@@ -117,6 +119,13 @@
     .fa-location-dot{
         color: #000000;
         font-size: 25px;
+    }
+    #touritem-info {
+        width: 15rem;
+        position: absolute;
+        bottom: -50%;
+        right: 120%;
+        display: none;
     }
     #touritem-name {
         font-size: 18px;
@@ -253,7 +262,15 @@
                                 </div>
                                 <span id="review-book-title" class="ms-2">리뷰 북 타이틀</span>
                             </div>
-                            <div id="touritem-info" class="d-flex align-items-center gap-2">
+                            <div id="touritem-wrap" class="d-flex align-items-center gap-2">
+                                <div id="touritem-info" class="card">
+                                    <img id="touritem-info-img" src="../assets/img/no_image.png" class="card-img-top" alt="...">
+                                    <div class="card-body">
+                                        <strong id="touritem-info-title" class="card-text">aaa</strong>
+                                        <p id="touritem-info-address" class="card-text">bbb</p>
+                                        <p id="touritem-info-category" class="card-text">ccc</p>
+                                    </div>
+                                </div>
                                 <i class="fa-solid fa-location-dot"></i>
                                 <span id="touritem-name">관광지 이름</span>
                             </div>
@@ -342,6 +359,13 @@
     <!-- End of container -->
 </div>
 <script th:inline="javascript">
+    let savedFile = []; // 기존 저장된 이미지 파일의 id를 저장할 배열
+    let deleteFile = []; // 기존 저장된 이미지 파일 중 삭제할 id를 저장할 배열
+    let uploadFile = []; // 새로 업로드 할 파일의 정보를 저장할 배열
+
+    function calcFileLength() {
+        return savedFile.length - deleteFile.length + uploadFile.length;
+    }
 
     // swiper 설정
     var swiper = new Swiper(".mySwiper", {
@@ -360,7 +384,6 @@
     function openViewer(reviewId) {
         let loginUserName = [[${loginUser.id}]] === 'anonymousUser' ? "로그인 후 이용해주세요." : [[${loginUser.id}]]
         let loginUserProfile = [[${loginUser.profileImg}]]
-        console.log(loginUserProfile)
         $('#viewer').modal('show');
         $('#login-user-name').text(loginUserName);
         if(loginUserProfile != null){
@@ -386,9 +409,9 @@
                 }
                 $('#content').html(findReview.reviewContent);
                 if(findReview.reviewBookId == null){
-                    $('#review-book-info').hide();
+                    $('#review-book-info').removeClass('d-flex').hide();
                 }else {
-                    $('#review-book-info').show();
+                    $('#review-book-info').addClass('d-flex').show();
                     $('#review-book-title').text(findReview.reviewBookTitle);
                     if(findReview.reviewBookCoverImg != null){
                         $('#review-book-cover').attr('src','/api/review-photo/' + findReview.reviewBookCoverImg);
@@ -397,47 +420,72 @@
                 $('#touritem-name').text(findReview.tourItemTitle);
                 $('.swiper-wrapper').html("");
                 for(let photo of photoList){
+                    savedFile.push(photo.fileId);
                     const tempHtml = `<div class="swiper-slide">` +
                         `<button class="delete-img-btn btn btn-dark rounded-pill opacity-50">` +
                         `<i class="bi bi-x-lg"></i>` +
                         `</button>` +
-                        `<img class="preview-img" src="/api/review-photo/${photo.filePath}" style="object-fit: contain" onload="goLastSlide()"/>` +
+                        `<img class="preview-img" data-file-id="${photo.fileId}" src="/api/review-photo/${photo.filePath}" style="object-fit: contain"/>` +
                         `</div>`;
                     swiper.appendSlide(tempHtml);
                     swiper.update();
                 }
+                let fileLength = calcFileLength();
+                if(fileLength > 1){
+                    $('.swiper-controller').show()
+                }else {
+                    $('.swiper-controller').hide()
+                };
             },
             error : function (){
                 alert("리뷰 정보 조회에 실패했습니다.")
             }
         })
     }
+
+    let touritemInfoTimer;
+
+    $('#touritem-wrap').mouseenter(function (){
+        touritemInfoTimer = setTimeout(function () {
+            $('#touritem-info').show();
+        },300)
+    })
+    $('#touritem-wrap').mouseleave(function (){
+        clearTimeout(touritemInfoTimer);
+        $('#touritem-info').hide();
+    })
     function goLastSlide() {
-        swiper.slideTo(images.length-1,300,false);
+        let fileLength = calcFileLength();
+        swiper.slideTo(fileLength-1,300,false);
     }
 
     function deleteImg() {
         $(document).on('click','.delete-img-btn',function () {
             let idx = $(".delete-img-btn").index(this);
+            let deleteFileId = $('.swiper-wrapper .swiper-slide').eq(idx).find('img').attr('data-file-id');
+            if(deleteFileId !== undefined){
+                deleteFile.push(deleteFileId);
+            }
             swiper.slideTo(idx-1,300,false);
             swiper.removeSlide(idx);
             swiper.update();
-            images.splice(idx,1);
 
-            if(images.length > 1){
+            let fileLength = calcFileLength();
+
+            if(fileLength > 1){
                 $('.swiper-controller').show()
             }else {
                 $('.swiper-controller').hide()
             };
 
-            if(images.length === 0){
+            if(fileLength === 0){
                 const tempHtml = `<div class="swiper-slide">` +
                     `사진을 추가해주세요.` +
                     `</div>`;
                 swiper.appendSlide(tempHtml);
                 swiper.update();
             }
-            if($('.uploader').css('display') === 'none' && images.length < 4){
+            if($('.uploader').css('display') === 'none' && fileLength < 4){
                 $('.uploader').show()
             }
         })
@@ -518,7 +566,6 @@
             async: false,
             success : function (response) {
                 let bookmarkList = response.pageResponse.dtoList;
-                console.log(scrollPage)
                 // 로더를 일정시간 이상 노출하기 위한 setTimeout
                 setTimeout(() => {
                     $(".loader").hide()
@@ -582,12 +629,10 @@
             async: false,
             success : function (response) {
                 let reviewList = response.pageResponse.dtoList;
-                console.log(scrollPage)
                 // 로더를 일정시간 이상 노출하기 위한 setTimeout
                 setTimeout(() => {
                     $(".loader").hide()
                     $.each(reviewList, function (index, review){
-                        console.log(review)
                         let tempHtml = `<div class="gallery-item" tabIndex="0" onclick="openViewer(${review.reviewId})">`
                         if(review.photoCount > 1){
                             tempHtml += '<div class="gallery-item-type">' +
